--- a/src/main/java/com/whx/lock/readme
+++ b/src/main/java/com/whx/lock/readme
@@ -4,12 +4,16 @@ java 中的锁
 
 java上层中的锁
 
-    互斥锁
+    互斥锁-内置锁(synchronized)
         任何时间只允许一个线程进行读数据操作或者取数据操作,不允许其他线程进行读或者取操作
         机制:
                 "读-读"互斥
                 "读-写"互斥
                 "写-写"互斥
+
+    互斥锁-显示锁(ReentrantLock)
+        作用基本与内置锁相同,不同的是显示锁可以实现带有时间的锁,可以被中断,
+        tryLock本身不阻塞线程直接返回结果,tryLock(time)会阻塞time时间返回结果
 
     读写锁
         线程之间读读操作本身并没有相互影响,将读取操作都加上锁效率不高,
